Source/WebCore/html/HTMLOptionElement.cpp
@@ -137,15 +137,24 @@ String HTMLOptionElement::text() const
 
 void HTMLOptionElement::setText(const String &text, ExceptionCode& ec)
 {
+    // Changing the text causes a recalc of a select's items, which will reset the selected
+    // index to the first item if the select is single selection with a menu list. We attempt to
+    // preserve the selected item.
+    HTMLSelectElement* select = ownerSelectElement();
+    bool selectIsMenuList = select && select->usesMenuList();
+    int oldSelectedIndex = selectIsMenuList ? select->selectedIndex() : -1;
+
     // Handle the common special case where there's exactly 1 child node, and it's a text node.
     Node* child = firstChild();
-    if (child && child->isTextNode() && !child->nextSibling()) {
+    if (child && child->isTextNode() && !child->nextSibling())
         static_cast<Text *>(child)->setData(text, ec);
-        return;
+    else {
+        removeChildren();
+        appendChild(Text::create(document(), text), ec);
     }
-
-    removeChildren();
-    appendChild(Text::create(document(), text), ec);
+    
+    if (selectIsMenuList && select->selectedIndex() != oldSelectedIndex)
+        select->setSelectedIndex(oldSelectedIndex);
 }
 
 void HTMLOptionElement::accessKeyAction(bool)
